[project]
name = "django-model-analyze"
version = "0.1.0"
description = "Django model analysis tool for generating model diagrams and documentation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["django==4.2.22", "djangorestframework>=3.15.1"]

[dependency-groups]
dev = [
    "django-stubs>=5.2.0",
    "icecream>=2.1.4",
    "mypy>=1.15.0",
    "ruff>=0.11.10",
    "ty>=0.0.1a6",
]
